erDiagram
    users ||--o{ jobs : "posts"
    users ||--o{ applications : "submits"
    users ||--o{ saved_jobs : "saves"
    users ||--o{ messages : "sends"
    users ||--o{ messages : "receives"
    users }o--o| companies : "works for"
    users ||--o{ experiences : "has"
    users ||--o{ educations : "has"
    users ||--o{ user_skills : "has"
    users ||--o{ documents : "uploads"
    
    documents ||--o{ document_reviews : "has AI analysis"
    
    companies ||--o{ jobs : "has"
    
    jobs ||--o{ applications : "receives"
    jobs ||--o{ saved_jobs : "bookmarked by"
    jobs ||--o{ job_skills : "requires"
    jobs }o--|| categories : "belongs to"
    
    applications ||--o{ messages : "has"
    applications ||--o{ reviews : "has"
    applications }o--o| documents : "uses CV"
    
    skills ||--o{ user_skills : "possessed by"
    skills ||--o{ job_skills : "required by"
    
    users {
        bigint id PK
        string email UK
        string password
        enum type "job_seeker, company_admin, hiring_manager"
        bigint company_id FK "null for job_seekers"
        string first_name
        string last_name
        string phone
        string avatar
        text bio
        string city
        string country
        json settings "notifications, preferences"
        timestamp email_verified_at
        timestamps created_at_updated_at
        softDeletes deleted_at
    }
    
    companies {
        bigint id PK
        string name
        string slug UK
        string logo
        string website
        text description
        string industry
        enum size "1-10, 11-50, 51-200, 201-500, 500+"
        string location
        boolean verified
        timestamps created_at_updated_at
        softDeletes deleted_at
    }
    
    jobs {
        bigint id PK
        bigint company_id FK
        bigint posted_by FK "users.id"
        bigint category_id FK
        string title
        string slug UK
        text description
        text requirements
        enum type "full_time, part_time, contract, remote"
        enum level "entry, mid, senior, lead"
        string location
        decimal salary_min
        decimal salary_max
        string salary_currency
        json screening_questions
        enum status "draft, active, closed, expired"
        integer views_count
        integer applications_count
        date deadline
        timestamp published_at
        timestamps created_at_updated_at
        softDeletes deleted_at
    }
    
    categories {
        bigint id PK
        string name UK
        string slug UK
        bigint parent_id FK "nullable"
        timestamps created_at_updated_at
    }
    
    experiences {
        bigint id PK
        bigint user_id FK
        string job_title
        string company_name
        string location
        date start_date
        date end_date
        boolean is_current
        text description
        timestamps created_at_updated_at
    }
    
    educations {
        bigint id PK
        bigint user_id FK
        string institution
        string degree
        string field_of_study
        date start_date
        date end_date
        timestamps created_at_updated_at
    }
    
    skills {
        bigint id PK
        string name UK
        string slug UK
        timestamps created_at_updated_at
    }
    
    user_skills {
        bigint id PK
        bigint user_id FK
        bigint skill_id FK
        enum level "beginner, intermediate, advanced, expert"
        timestamps created_at_updated_at
        unique user_id_skill_id
    }
    
    job_skills {
        bigint id PK
        bigint job_id FK
        bigint skill_id FK
        boolean is_required
        timestamps created_at_updated_at
        unique job_id_skill_id
    }
    
    applications {
        bigint id PK
        bigint job_id FK
        bigint user_id FK
        bigint document_id FK "selected CV for this application"
        text cover_letter
        json screening_answers
        enum status "new, reviewing, shortlisted, interview, offer, hired, rejected, withdrawn"
        integer rating "1-5"
        json status_history
        boolean is_read
        timestamp read_at
        timestamps created_at_updated_at
    }
    
    documents {
        bigint id PK
        bigint user_id FK
        string original_name
        string file_name "stored filename"
        string file_path "S3/cloud path"
        string file_url "full URL to access"
        enum type "resume, cover_letter, portfolio, certificate, other"
        string mime_type "application/pdf, etc"
        integer file_size "in bytes"
        boolean is_primary "default CV"
        json parsed_data "extracted text/data from resume"
        timestamps created_at_updated_at
        softDeletes deleted_at
    }
    
    document_reviews {
        bigint id PK
        bigint document_id FK
        integer overall_score "0-100"
        json scores "formatting, content, keywords, structure"
        json strengths "array of strong points"
        json weaknesses "array of areas to improve"
        json suggestions "actionable recommendations"
        json keyword_analysis "missing keywords, matching rate"
        json ats_compatibility "ATS scan score and issues"
        enum status "analyzing, completed, failed"
        string ai_model_version "track which AI model used"
        timestamps created_at_updated_at
    }
    
    reviews {
        bigint id PK
        bigint application_id FK
        bigint reviewer_id FK "users.id"
        integer rating "1-5"
        text feedback
        enum recommendation "hire, maybe, reject"
        timestamps created_at_updated_at
    }
    
    saved_jobs {
        bigint id PK
        bigint user_id FK
        bigint job_id FK
        text notes
        timestamps created_at_updated_at
        unique user_id_job_id
    }
    
    messages {
        bigint id PK
        bigint application_id FK
        bigint sender_id FK "users.id"
        bigint recipient_id FK "users.id"
        string subject
        text body
        boolean is_read
        timestamp read_at
        timestamps created_at_updated_at
    }
    
    notifications {
        bigint id PK
        bigint user_id FK
        string type
        string title
        text message
        json data
        boolean is_read
        timestamp read_at
        timestamp created_at
    }